[tool.poetry]
name = "myip"
version = "0.1.0"
description = "A tool for looking up your external IP address"
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
